| Summary: | ASTERISK-25696: bridge_basic: don't cache xferfailsound during a transfer | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2016-01-14 14:44:15.000-0600 | Date Closed: | 2016-01-16 08:33:30.000-0600 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Bridging/bridge_basic |
| Versions: | 13.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The xferfailsound is read from the channel at the beginning of the transfer, and that value is "cached" for the duration of the transfer. Therefore, changing the xferfailsound on the channel using the FEATURE() dialplan function does nothing once the transfer is under way.
Change the transfer code to instead get the configuration from the channel when the configuration is actually going to be used. | ||
| Comments: | |||